<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_light_gradient"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="15dp"
        android:layout_weight="1"
        android:gravity="top"
        android:text="@string/teamx"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/tEmail"
        android:layout_width="250dp"
        android:layout_height="20dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="0.5"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:backgroundTint="#991C1B1F"
        android:textCursorDrawable="@drawable/text_hint_color_selector" />

    <TextView
        android:id="@+id/tEmailError"
        android:layout_width="250dp"
        android:layout_height="20dp"
        android:layout_weight="0.2"
        android:textColor="@color/red"
        android:textSize="16sp"
        android:layout_marginBottom="30dp"
        android:visibility="invisible"/>

    <EditText
        android:id="@+id/tPassword"
        android:layout_width="250dp"
        android:layout_height="20dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="0.5"
        android:hint="@string/password"
        android:textColor="@color/black"
        android:inputType="textPassword"
        android:backgroundTint="#991C1B1F"
        android:textCursorDrawable="@drawable/text_hint_color_selector" />

    <TextView
        android:id="@+id/tPasswordError"
        android:layout_width="250dp"
        android:layout_height="20dp"
        android:layout_weight="0.2"
        android:textColor="@color/red"
        android:textSize="16sp"
        android:layout_marginBottom="40dp"
        android:visibility="invisible"/>

    <Button
        android:id="@+id/bLogin"
        android:layout_width="180dp"
        android:layout_height="18dp"
        android:layout_marginBottom="30dp"
        android:layout_weight="0.3"
        android:background="@drawable/button_corners"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:onClick="onLogin"/>

    <Button
        android:id="@+id/bRegister"
        android:layout_width="180dp"
        android:layout_height="18dp"
        android:layout_weight="0.3"
        android:background="@drawable/button_corners"
        android:text="@string/register"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:onClick="onRegister"/>

</LinearLayout>
