<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_yellow"
    android:padding="30dp"
    tools:context=".AddTeamActivity">

    <LinearLayout
        android:id="@+id/lInputs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/tName"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_weight="2"
            android:backgroundTint="#991C1B1F"
            android:hint="@string/name"
            android:textColor="@color/black"
            android:textCursorDrawable="@drawable/text_hint_color_selector"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/tDescription"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:layout_weight="2"
            android:backgroundTint="#991C1B1F"
            android:hint="@string/description"
            android:textColor="@color/black"
            android:textCursorDrawable="@drawable/text_hint_color_selector"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_weight="2"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:text="@string/add_requirements" />
    </LinearLayout>

    <ListView
        android:id="@+id/lRequirements"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bCreate"
        android:layout_below="@id/lInputs"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="30dp" />

    <Button
        android:id="@+id/bCreate"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_corners"
        android:onClick="onCreateTeam"
        android:text="@string/create_team"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="40dp"
        android:maxLines="1"/>

</RelativeLayout>